# WebSecurity-hw3

./: .gitignore  CMakeLists.txt  README.md  build.sh  genkey.sh  insert.cgi.cpp  ssl.conf
include/: server.h  utility.h
src/: CMakeLists.txt
src/cgi/: CMakeLists.txt  insert.cgi.cpp  view.cgi.cpp  viewstatic.cgi.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp
static/: done.html  part1  part2
